fix: differentiate between cancel and delete, use patch for cancelling
